@@ -18,6 +18,8 @@ Release 1.1.1 Start 12/09/2022
 - 09/22/2022
 07. docker-entrypoint: fixed fix-queue argument for slowq
 08. svps.in, minisvc.in, qmailctl.sh: replaced deprecated egrep with grep -E
+- 10/22/2022
+09. docker-entrypoint: fixed extra_args variable getting clobbered.
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.0-1.1%{?dist}
 Release 1.1.0 Start 27/02/2021 End 08/09/2022
